# Practice-Playing-In-Your-DAW

./: .gitignore  CMakeLists.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/gui/: NoteBars.cpp  NoteBars.h  NoteGrid.cpp  NoteGrid.h  NoteGridViewPort.cpp  NoteGridViewPort.h  RecordButtonLookAndFeel.cpp  RecordButtonLookAndFeel.h  TimeSignaturePanel.cpp  TimeSignaturePanel.h  TrackListBoxModel.cpp  TrackListBoxModel.h
src/processing/: DAWTransportData.cpp  DAWTransportData.h  MPENoteEvent.cpp  MPENoteEvent.h  MyMPEInstrumentListener.cpp  MyMPEInstrumentListener.h  TimeSignature.h  Track.cpp  Track.h  TrackListSingleton.cpp  TrackListSingleton.h
test/: DAWTransportData.cpp  MyMPEInstrumentListenerTest.cpp
